--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
@@ -3,6 +3,13 @@
 @{
     Html.AddScriptParts(@Url.Content("~/Content/editors/tinymce/tiny_mce_gzip.js"));
     Html.AddScriptParts(@Url.Content("~/Content/editors/tinymce/globalinit.js"));
+
+    var availableLangs = new string[] { "de", "en" };
+    var lang = WorkContext.WorkingLanguage.UniqueSeoCode.ToLower();
+    if (!availableLangs.Contains(lang))
+    {
+        lang = "en";
+    }
 }
 <script type="text/javascript">
 
@@ -14,7 +21,7 @@
                 tiny_mce_global_config, 
                 {
                     elements: '@ViewData.TemplateInfo.GetFullHtmlFieldName(string.Empty)',
-                    language: '@WorkContext.WorkingLanguage.UniqueSeoCode.ToLower()',
+                    language: '@lang',
                     editor_css: '@Url.Content("~/Content/editors/tinymce/themes/advanced/skins/smartstore/ui.less")',
                     popup_css: '@Url.Content("~/Content/editors/tinymce/themes/advanced/skins/smartstore/dialog.less")'
                 }
