--- a/src/Presentation/SmartStore.Web/Views/Customer/Login.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Login.cshtml
@@ -65,7 +65,7 @@
                         <div class="block-body">
                             <p>@T("Account.Login.NewCustomerText")</p>
                             <div class="buttons">
-                                <a class="btn btn-large btn-primary register-button" href="@registerUrl">
+                                <a class="btn btn-primary register-button" href="@registerUrl">
                                     @T("Account.Register")
                                 </a>
                             </div>
@@ -148,7 +148,7 @@
                                     }
                             
                                     <div class="buttons">  
-                                        <button type="submit" class="btn btn-large login-button">
+                                        <button type="submit" class="btn login-button">
                                             <i class="icon-signin"></i>&nbsp;
                                             @T("Account.Login.LoginButton")
                                         </button>
