--- a/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecovery.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecovery.cshtml
@@ -10,33 +10,32 @@
     <div class="page-title">
         <h1>@T("Account.PasswordRecovery")</h1>
     </div>
-    <div class="clear">
-    </div>
+
     <div class="page-body">
         @if (!String.IsNullOrEmpty(Model.Result))
         {
-            <div class="result">
+            <div class="alert alert-success">
                 @Model.Result
+            </div>
+        }
+        else 
+        {
+            <div class="alert alert-info">
+                @T("Account.PasswordRecovery.Tooltip")
             </div>
         }
         @using (Html.BeginForm())
         {
-            <p class="tooltip">@T("Account.PasswordRecovery.Tooltip")</p>
-            <fieldset class="form-fields">
-                <dl>
-                    <dt>
-                        @Html.LabelFor(model => model.Email):</dt>
-                    <dd>
-                        @Html.TextBoxFor(model => model.Email, new { @class = "email" })
-                        @Html.RequiredHint()
-                        @Html.ValidationMessageFor(model => model.Email)
-                    </dd>
-                </dl>
-            </fieldset>
-            <div class="clear">
+            <div class="control-group">
+                @Html.LabelFor(model => model.Email, new { @class = "control-label required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Email, new { @class = "email" })
+                    @Html.ValidationMessageFor(model => model.Email)
+                </div>
             </div>
+
             <div class="buttons">
-                <input type="submit" name="send-email" class="button-1 password-recovery-button" value="@T("Account.PasswordRecovery.RecoverButton")" />
+                <input type="submit" name="send-email" class="btn password-recovery-button" value="@T("Account.PasswordRecovery.RecoverButton")" />
             </div>
         }
     </div>
