--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/_CreateOrUpdate.cshtml
@@ -9,6 +9,7 @@
     x.Add().Text(T("Admin.Catalog.Manufacturers.Info").Text).Content(TabInfo()).Selected(true);
     x.Add().Text(T("Admin.Common.SEO").Text).Content(TabSeo());
     x.Add().Text(T("Admin.Catalog.Manufacturers.Products").Text).Content(TabProducts());
+	x.Add().Text(T("Admin.Catalog.Manufacturers.Stores").Text).Content(TabStores());
     
     //generate an event
     EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "manufacturer-edit"));
@@ -295,6 +296,59 @@
     {
             @T("Admin.Catalog.Manufacturers.Products.SaveBeforeEdit")
     }
+}
+
+@helper TabStores()
+{
+    <script type="text/javascript">
+    	$(document).ready(function () {
+
+    		$("#@Html.FieldIdFor(model => model.LimitedToStores)").click(toggleStoreMapping);
+        
+        	toggleStoreMapping();
+        });
+
+
+        function toggleStoreMapping() {
+        	if ($('#@Html.FieldIdFor(model => model.LimitedToStores)').is(':checked')) {
+        		$('#pnl-available-stores').show();
+        	}
+        	else {
+        		$('#pnl-available-stores').hide();
+        	}
+        }
+
+    </script>
+    <table class="adminContent">
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.LimitedToStores):
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.LimitedToStores)
+                @Html.ValidationMessageFor(model => model.LimitedToStores)
+            </td>
+        </tr>
+        <tr id="pnl-available-stores">
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.AvailableStores):
+            </td>
+            <td class="adminData">
+                @if (Model.AvailableStores != null && Model.AvailableStores.Count > 0)
+                {
+                    foreach (var store in Model.AvailableStores)
+                    {
+                    <div>
+                        <input type="checkbox" name="SelectedStoreIds" value="@store.Id" checked="@(Model.SelectedStoreIds != null && Model.SelectedStoreIds.Contains(store.Id))" />@store.Name
+                    </div>
+                    }
+                }
+                else
+                {
+                    <div>@T("Admin.Configuration.Stores.NoStoresDefined")</div>
+                }</td>
+        </tr>
+    </table>
 }
 
 <script type="text/javascript">
