--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
@@ -624,6 +624,7 @@
                                 columns.Bound(sci => sci.Quantity).Width(100);
                                 columns.Bound(sci => sci.UnitPrice).Width(100);
                                 columns.Bound(sci => sci.Total).Width(100);
+								columns.Bound(sci => sci.Store).Width(100);
                                 columns.Bound(sci => sci.UpdatedOn).Width(100);
                             })
                             .DataBinding(dataBinding => dataBinding.Ajax()
@@ -652,6 +653,7 @@
                                 columns.Bound(sci => sci.Quantity).Width(100);
                                 columns.Bound(sci => sci.UnitPrice).Width(100);
                                 columns.Bound(sci => sci.Total).Width(100);
+								columns.Bound(sci => sci.Store).Width(100);
                                 columns.Bound(sci => sci.UpdatedOn).Width(100);
                             })
                             .DataBinding(dataBinding => dataBinding.Ajax()
