Allow a store owner to filter orders in admin area by store

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -75,6 +75,14 @@
         </tr>
        <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.StoreId):
+            </td>
+            <td class="adminData">
+                @Html.DropDownList("StoreId", Model.AvailableStores)
+            </td>
+        </tr>
+		<tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.OrderGuid)
             </td>
             <td class="adminData">
@@ -121,6 +129,7 @@
                             columns.Bound(x => x.PaymentStatus);
                             columns.Bound(x => x.ShippingStatus);
                             columns.Bound(x => x.CustomerEmail);
+							columns.Bound(x => x.StoreName);
                             columns.Bound(x => x.CreatedOn);
                             columns.Bound(x => x.OrderTotal)
                                  .FooterTemplate(
@@ -217,7 +226,8 @@
                     CustomerEmail: $('#@Html.FieldIdFor(model => model.CustomerEmail)').val(),
                     OrderStatusId: $('#@Html.FieldIdFor(model => model.OrderStatusId)').val(),
                     PaymentStatusId: $('#@Html.FieldIdFor(model => model.PaymentStatusId)').val(),
-                    ShippingStatusId: $('#@Html.FieldIdFor(model => model.ShippingStatusId)').val(),
+            		ShippingStatusId: $('#@Html.FieldIdFor(model => model.ShippingStatusId)').val(),
+            		StoreId: $('#@Html.FieldIdFor(model => model.StoreId)').val(),
                     OrderGuid: $('#@Html.FieldIdFor(model => model.OrderGuid)').val()
                     };
             e.data = searchModel;
