Added "HOST values" field to a store entity for a comma separated list of possible HTTP_POST values (for example, "yourstore.com,www.yourstore.com"). Required if you have run a multi-store solution to determine the current store.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
@@ -12,6 +12,15 @@
             @Html.ValidationMessageFor(model => model.Name)
         </td>
     </tr>
+   <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.Hosts)
+        </td>
+        <td class="adminData">
+            @Html.EditorFor(model => model.Hosts)
+            @Html.ValidationMessageFor(model => model.Hosts)
+        </td>
+    </tr>
     <tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(model => model.DisplayOrder):
