Added "Url" property to "Store" entity. Removed "StoreName" and "StoreUrl" properties from StoreInformationSettings.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Store/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Store/List.cshtml
@@ -15,7 +15,7 @@
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<CountryModel>()
+            @(Html.Telerik().Grid<StoreModel>()
                     .Name("stores-grid")
                     .Columns(columns =>
                     {
