--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
@@ -1,5 +1,4 @@
-﻿@model Telerik.Web.Mvc.GridModel<MessageTemplateModel>
-@using Telerik.Web.Mvc.UI
+﻿@using Telerik.Web.Mvc.UI
 @{
     //page title
     ViewBag.Title = T("Admin.ContentManagement.MessageTemplates").Text;
@@ -15,7 +14,7 @@
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<MessageTemplateModel>(Model.Data)
+            @(Html.Telerik().Grid<MessageTemplateModel>()
                     .Name("templates-grid")
                     .Columns(columns =>
                     {
@@ -23,6 +22,7 @@
                             .Width(400)
                             .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
                             .ClientTemplate("<a href=\"Edit/<#= Id #>'><#Name#></a>");
+						columns.Bound(x => x.StoreName);
                         columns.Bound(x => x.IsActive)
                             .Width(100)
                             .Template(item => @Html.SymbolForBool(item.IsActive))
