--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/Edit.cshtml
@@ -13,7 +13,9 @@
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
             <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
+			<button type="submit" name="message-template-delete" id="message-template-delete" class="btn btn-danger"><i class="icon-trash icon-white"></i>&nbsp;@T("Admin.Common.Delete")</button>
         </div>
     </div>
     @Html.Partial("_CreateOrUpdate", Model)
 }
+@Html.DeleteConfirmation("message-template-delete")
