Allow a store owner to filter message templates by store

--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
@@ -1,4 +1,6 @@
-﻿@using Telerik.Web.Mvc.UI
+﻿@model MessageTemplateListModel
+@using Telerik.Web.Mvc.UI
+@using SmartStore.Web.Framework;
 @{
     //page title
     ViewBag.Title = T("Admin.ContentManagement.MessageTemplates").Text;
@@ -11,32 +13,73 @@
     <div class="options">
     </div>
 </div>
+<table width="100%">
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.SearchStoreId):
+        </td>
+        <td class="adminData">
+            @Html.DropDownList("SearchStoreId", Model.AvailableStores)
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2">
+			<button type="button" id="search-templates" class="btn">
+				<i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")
+			</button>
+        </td>
+    </tr>
+</table>
+<p>
+</p>
 <table class="adminContent">
     <tr>
         <td>
             @(Html.Telerik().Grid<MessageTemplateModel>()
-                    .Name("templates-grid")
-                    .Columns(columns =>
-                    {
-                        columns.Bound(x => x.Name)
-                            .Width(400)
-                            .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>'><#Name#></a>");
-						columns.Bound(x => x.StoreName);
-                        columns.Bound(x => x.IsActive)
-                            .Width(100)
-                            .Template(item => @Html.SymbolForBool(item.IsActive))
-                            .ClientTemplate(@Html.SymbolForBool("IsActive"))
-                            .Centered();
-                        columns.Bound(x => x.Id)
-                            .Width(50)
-                            .Centered()
-                            .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
-                            .Title(T("Admin.Common.Edit").Text);
-                    })
-                    .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "MessageTemplate"))
-                    .EnableCustomBinding(true))
+				.Name("templates-grid")
+				.Columns(columns =>
+				{
+					columns.Bound(x => x.Name);
+					columns.Bound(x => x.StoreName);
+					columns.Bound(x => x.Subject);
+					columns.Bound(x => x.IsActive)
+						.Template(item => @Html.SymbolForBool(item.IsActive))
+						.ClientTemplate(@Html.SymbolForBool("IsActive"))
+						.Centered()
+						.Width(100);
+					columns.Bound(x => x.Id)
+						.Width(50)
+						.Centered()
+						.Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
+						.ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
+						.Title(T("Admin.Common.Edit").Text);
+				})
+				.DataBinding(dataBinding => dataBinding.Ajax().Select("List", "MessageTemplate"))
+				.ClientEvents(events => events.OnDataBinding("onDataBinding"))
+				.EnableCustomBinding(true))
+
         </td>
     </tr>
 </table>
+
+<script type="text/javascript">
+
+    $(document).ready(function () {
+        //search button
+        $('#search-templates').click(function () {
+            //search
+            var grid = $('#templates-grid').data('tGrid');
+            //no paging support in this grid
+            //grid.currentPage = 1; //new search. Set page size to 1
+            grid.ajaxRequest();
+            return false;
+        });
+    });
+
+    function onDataBinding(e) {
+        var searchModel = {
+            SearchStoreId: $('#SearchStoreId').val()
+        };
+        e.data = searchModel;
+    }
+</script>
