--- a/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model Telerik.Web.Mvc.GridModel<TopicModel>
+﻿@model TopicListModel
 @using Telerik.Web.Mvc.UI
 @{    
     //page title
@@ -13,17 +13,34 @@
         <a href="@Url.Action("Create")" class="btn"><i class="icon-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
     </div>
 </div>
+<table width="100%">
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.SearchStoreId):
+        </td>
+        <td class="adminData">
+            @Html.DropDownList("SearchStoreId", Model.AvailableStores)
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2">
+			<button type="button" id="search-topics" class="btn">
+				<i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")
+			</button>
+        </td>
+    </tr>
+</table>
+<p>
+</p>
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<TopicModel>(Model.Data)
+            @(Html.Telerik().Grid<TopicModel>()
                     .Name("topics-grid")
                     .Columns(columns =>
                     {
-                        columns.Bound(x => x.SystemName)
-                            .Width(200)
-                            .Template(x => Html.ActionLink(x.SystemName, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>'><#SystemName#></a>");
+						columns.Bound(x => x.SystemName);
+						columns.Bound(x => x.StoreName);						
                         columns.Bound(x => x.IsPasswordProtected)
                             .Width(100)
                             .Template(item => @Html.SymbolForBool(item.IsPasswordProtected))
@@ -42,7 +59,30 @@
                             .Title(T("Admin.Common.Edit").Text);
                     })
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Topic"))
+					.ClientEvents(events => events.OnDataBinding("onDataBinding"))
                     .EnableCustomBinding(true))
         </td>
     </tr>
 </table>
+
+<script type="text/javascript">
+        
+    $(document).ready(function () {
+        //search button
+        $('#search-topics').click(function () {
+            //search
+            var grid = $('#topics-grid').data('tGrid');
+            //no paging support in this grid
+            //grid.currentPage = 1; //new search. Set page size to 1
+            grid.ajaxRequest();
+            return false;
+        });
+    });
+
+    function onDataBinding(e) {
+        var searchModel = {
+            SearchStoreId: $('#SearchStoreId').val()
+        };
+        e.data = searchModel;
+    }
+</script>  
