--- a/src/Presentation/SmartStore.Web/Administration/Views/News/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/_CreateOrUpdate.cshtml
@@ -14,6 +14,15 @@
     </tr>
     <tr>
         <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.StoreId):
+        </td>
+        <td class="adminData">
+            @Html.DropDownListFor(model => model.StoreId, Model.AvailableStores)
+            @Html.ValidationMessageFor(model => model.StoreId)
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
             @Html.SmartLabelFor(model => model.Title)
         </td>
         <td class="adminData">
