--- a/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
@@ -39,7 +39,10 @@
                     .Name("topics-grid")
                     .Columns(columns =>
                     {
-						columns.Bound(x => x.SystemName);
+						columns.Bound(x => x.SystemName)
+							.Width(200)
+							.Template(x => Html.ActionLink(x.SystemName, "Edit", new { id = x.Id }))
+							.ClientTemplate("<a href=\"Edit/<#= Id #>'><#SystemName#></a>");
 						columns.Bound(x => x.StoreName);						
                         columns.Bound(x => x.IsPasswordProtected)
                             .Width(100)
@@ -66,23 +69,23 @@
 </table>
 
 <script type="text/javascript">
-        
-    $(document).ready(function () {
-        //search button
-        $('#search-topics').click(function () {
-            //search
-            var grid = $('#topics-grid').data('tGrid');
-            //no paging support in this grid
-            //grid.currentPage = 1; //new search. Set page size to 1
-            grid.ajaxRequest();
-            return false;
-        });
-    });
 
-    function onDataBinding(e) {
-        var searchModel = {
-            SearchStoreId: $('#SearchStoreId').val()
-        };
-        e.data = searchModel;
-    }
-</script>  
+	$(document).ready(function () {
+		//search button
+		$('#search-topics').click(function () {
+			//search
+			var grid = $('#topics-grid').data('tGrid');
+			//no paging support in this grid
+			//grid.currentPage = 1; //new search. Set page size to 1
+			grid.ajaxRequest();
+			return false;
+		});
+	});
+
+	function onDataBinding(e) {
+		var searchModel = {
+			SearchStoreId: $('#SearchStoreId').val()
+		};
+		e.data = searchModel;
+	}
+</script>
