Choose a store or all stores for which feed files will be generated

--- a/src/Plugins/Feed.Froogle/Views/FeedFroogle/Configure.cshtml
+++ b/src/Plugins/Feed.Froogle/Views/FeedFroogle/Configure.cshtml
@@ -115,7 +115,16 @@
             <hr />
         </td>
     </tr>
-    <tr>
+	<tr>
+		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.StoreId):
+		</td>
+		<td class="adminData">
+			@Html.DropDownListFor(model => model.StoreId, Model.AvailableStores)
+			@Html.ValidationMessageFor(model => model.StoreId)
+		</td>
+	</tr>
+	<tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(m => m.BuildDescription)
         </td>
