--- a/src/Plugins/Feed.ElmarShopinfo/Views/FeedElmarShopinfo/Configure.cshtml
+++ b/src/Plugins/Feed.ElmarShopinfo/Views/FeedElmarShopinfo/Configure.cshtml
@@ -97,6 +97,15 @@
 @helper TabGeneral()
 {
     <table class="adminContent">
+	<tr>
+		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.StoreId):
+		</td>
+		<td class="adminData">
+			@Html.DropDownListFor(model => model.StoreId, Model.AvailableStores)
+			@Html.ValidationMessageFor(model => model.StoreId)
+		</td>
+	</tr>
     <tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(m => m.BuildDescription)
