--- a/src/Presentation/SmartStore.Web/Administration/Views/Language/Resources.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Language/Resources.cshtml
@@ -52,8 +52,8 @@
                             .Width(100)
                             .ReadOnly()
                             .Filterable(false);
-                        columns.Bound(x => x.Name).EditorTemplateName("String").Width(300);
-                        columns.Bound(x => x.Value).EditorTemplateName("String");
+                        columns.Bound(x => x.Name).Width(300);
+                        columns.Bound(x => x.Value);
                         columns.Command(commands =>
                         {
                             commands.Edit().Localize(T);
