--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/AllSettings.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/AllSettings.cshtml
@@ -28,9 +28,9 @@
                     })
                     .Columns(columns =>
                     {
-						columns.Bound(x => x.Name).EditorTemplateName("String");
-                        columns.Bound(x => x.Value).EditorTemplateName("String");
-						columns.Bound(x => x.StoreName).ReadOnly();
+						columns.Bound(x => x.Name);
+                        columns.Bound(x => x.Value);
+						columns.Bound(x => x.Store).EditorTemplateName("Store");
                         columns.Command(commands =>
                         {
                             commands.Edit().Localize(T);
@@ -52,12 +52,17 @@
                             .Delete("SettingDelete", "Setting")
                             .Insert("SettingAdd", "Setting");
                     })
-                    .ClientEvents(x => x.OnError("grid_onError"))
+                    .ClientEvents(x => x.OnError("grid_onError").OnEdit("grid_onStoreEdit"))
                     .EnableCustomBinding(true))
             <script type="text/javascript">
                 function grid_onError(e) {
                     alert(e.XMLHttpRequest.responseText);
                     e.preventDefault();
+                }
+
+                function grid_onStoreEdit(e) {
+					@* codehint: sm-edit *@
+                	$(e.form).find('#Store').select2('val', e.dataItem['StoreId']);
                 }
             </script>
         </td>
