News settings. Implemented UI for multi-store configuration.

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -521,6 +521,21 @@ a:hover {
 	.options { right: 15px }
 }
 
+/* STORE SCOPE CONFIGURATION */
+.multi-store-scope {
+    background-color: #dfdfdf;
+    padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.multi-store-scope .selector { }
+.multi-store-scope .check-all {
+    margin-top: 10px;
+}
+.multi-store-scope .title{
+    font-weight:700;
+}
+
 /* TABLES */
 td {
     vertical-align: middle;
