--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/News.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/News.cshtml
@@ -15,13 +15,16 @@
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
         </div>
     </div>
-@Html.ValidationSummary(false)
+	@Html.Action("StoreScopeConfiguration", "Setting")
+	@Html.ValidationSummary(false)
+
     <table class="adminContent">
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.Enabled)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.Enabled, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.Enabled)
                 @Html.ValidationMessageFor(model => model.Enabled)
             </td>
@@ -31,6 +34,7 @@
                 @Html.SmartLabelFor(model => model.AllowNotRegisteredUsersToLeaveComments)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.AllowNotRegisteredUsersToLeaveComments, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.AllowNotRegisteredUsersToLeaveComments)
                 @Html.ValidationMessageFor(model => model.AllowNotRegisteredUsersToLeaveComments)
             </td>
@@ -40,6 +44,7 @@
                 @Html.SmartLabelFor(model => model.NotifyAboutNewNewsComments)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.NotifyAboutNewNewsComments, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.NotifyAboutNewNewsComments)
                 @Html.ValidationMessageFor(model => model.NotifyAboutNewNewsComments)
             </td>
@@ -49,6 +54,7 @@
                 @Html.SmartLabelFor(model => model.ShowNewsOnMainPage)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.ShowNewsOnMainPage, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.ShowNewsOnMainPage)
                 @Html.ValidationMessageFor(model => model.ShowNewsOnMainPage)
             </td>
@@ -58,6 +64,7 @@
                 @Html.SmartLabelFor(model => model.MainPageNewsCount)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.MainPageNewsCount, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.MainPageNewsCount)
                 @Html.ValidationMessageFor(model => model.MainPageNewsCount)
             </td>
@@ -67,6 +74,7 @@
                 @Html.SmartLabelFor(model => model.NewsArchivePageSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.NewsArchivePageSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.NewsArchivePageSize)
                 @Html.ValidationMessageFor(model => model.NewsArchivePageSize)
             </td>
@@ -76,6 +84,7 @@
                 @Html.SmartLabelFor(model => model.ShowHeaderRssUrl)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.ShowHeaderRssUrl, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.ShowHeaderRssUrl)
                 @Html.ValidationMessageFor(model => model.ShowHeaderRssUrl)
             </td>
